# mds

./: README.md  pyproject.toml  requirements.txt
synced/src_ipynb/: audible_eval.parquet  audible_test.parquet  audible_train.parquet
synced/src_ipynb/.ipynb_checkpoints/: main-checkpoint.ipynb
synced/src_py/: main.py
