[tool.poetry]
name = "mdsnas"
version = "0.1.0"
description = ""
authors = ["AissatouSow <NdeyeAissatou.SOW@orange-sonatel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.2.2"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
pandera = "^0.20.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
